# pred

./: .env.example  .gitignore  GEMINI.md  PROPOSAL.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/: main.py
src/engine/: risk_manager.py  strategy.py
src/execution/: models.py
tests/: test_strategy.py
web/src/app/: globals.css  layout.tsx  page.tsx
