[project]
name = "pred-mm-bot"
version = "0.1.0"
description = "High-performance Market Making bot for Pred.app"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "uvloop>=0.19.0",
    "loguru>=0.7.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
